1999-10-27  Elliot Lee  <sopwith@redhat.com>

	* gnomelib-init.h: Add attributes for application prefix/libdir/datadir/sysconfdir.
	* gnome-util.c: Make use of these attributes in gnome_file_locate().

	* gnome-ditem.[ch]: Add save routine, location accessors. Remove run-in-bg flag. Add check-for-changes routine.

1999-10-26  Elliot Lee  <sopwith@redhat.com>

	* gnome-ditem.[ch]: New files - replacement for gnome-dentry.[ch]
	* gnome-util.[ch] (gnome_file_locate) Redo the file location stuff
	                  (g_file_test): Use access() if only testing for existence. Also fix the other tests to
			                 work slightly more sanely (check that all specified conditions are met,
					 rather than that all unspecified conditions are not met).
	                  (gnome_user_shell): Use g_strdup instead of strdup
	* gnomelib-init2.c (gnome_program_attribute_get): Fix inverted error condition.
	* gnomelib-init.h: Add an attribute for an application-provided file locator function.
	* gnome-config.c: Recognize [yYtT1-9].* as TRUE boolean values, all others as FALSE boolean values.

1999-10-21  Federico Mena Quintero  <federico@redhat.com>

	* gnome-mime.c (add_ext): New helper function to add an
	extension->mime_type mapping.  It checks for the presence of old
	mappings of the same extension.  This fixes a memory leak in
	add_to_key() when there are multiple mappings of an extension to
	mime types in the .mime files.
	(add_to_key): Use add_ext().

1999-10-18  Jonathan Blandford  <jrb@redhat.com>

	* Makefile.am (libgnome10compat_a_SOURCES): new compatibility lib.

	* gnomelib-init2.c (gnome_program_parse_args): fixed so it compiles
	(gnome_program_get): fixed so it compiles
	(gnome_program_module_register): fixed so it compiles.

1999-10-07  Elliot Lee  <sopwith@redhat.com>
	* gnomelib-init2.[ch]: New implementation.
	* gnomelib-init.[ch]: Use new init system.