@@ -1,3 +1,8 @@
+1999-10-30  Dick Porter <dick@acm.org>
+
+	* Allow gnome-moz-remote to launch a netscape as a last resort, if
+		--remote cant find a running one.
+
 1999-10-27  Elliot Lee  <sopwith@redhat.com>
 
 	* gnomelib-init.h: Add attributes for application prefix/libdir/datadir/sysconfdir.
